--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,20 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs = -Xmx3G
 
+# Source Options
+# Use Modern Java(9+) Syntax (Courtesy of Jabel)
+use_modern_java_syntax = true
+
 # Mod Information
-mod_version = 1.0
-maven_group = com.cleanroommc
-archives_base_name = modid
+mod_version = 0.0.1
+maven_group = cn.gtcommunity
+archives_base_name = gregtinker
 
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
 
 # Boilerplate Options
-use_mixins = false
-use_coremod = false
+use_mixins = true
+use_coremod = true
 use_assetmover = false
 
 # Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
@@ -19,4 +23,4 @@ use_access_transformer = false
 
 # Coremod Arguments
 include_mod = true
-coremod_plugin_class_name = 
+coremod_plugin_class_name = cn.gtcommunity.gregtinker.GTEarlyMixin
