--- a/build.gradle
+++ b/build.gradle
@@ -126,16 +126,28 @@ dependencies {
     // implementation rfg.deobf('curse.maven:had-enough-items-557549:4543375')
     implementation rfg.deobf("curse.maven:mantle-74924:2713386")
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
-    implementation rfg.deobf(files("libs/GregicalityMultiblocks-1.2.7.jar"))
-    implementation rfg.deobf(files("libs/gregtech-1.12.2-2.8.5-beta.jar"))
-    implementation rfg.deobf(files("libs/gregtechfoodoption-1.10.2.jar"))
-    implementation rfg.deobf(files("libs/GregTechScienceGTQTport-1.0.jar"))
-    implementation rfg.deobf(files("libs/gtqtcore-1.0.jar"))
-    implementation rfg.deobf(files("libs/groovyscript-0.7.0.jar"))
     implementation rfg.deobf("curse.maven:tinkers-construct-74072:2902483")
-
-    implementation 'mezz.jei:jei_1.12.2:4.16.1.302'
-    runtimeOnly 'curse.maven:top-245211:2667280'
+    implementation rfg.deobf(files("libs/CTM-MC1.12.2-1.0.2.31.jar"))
+    implementation rfg.deobf(files("libs/GregicalityMultiblocks-1.2.9.jar"))
+    implementation rfg.deobf(files("libs/gregtech-1.12.2-2.8.10-beta.jar"))
+    implementation rfg.deobf(files("libs/!mixinbooter-8.9.jar"))
+    implementation rfg.deobf(files("libs/ae2-uel-v0.56.6.jar"))
+    implementation rfg.deobf(files("libs/gregtechfoodoption-1.12.2-1.11.0.jar"))
+    implementation rfg.deobf(files("libs/jei_1.12.2-4.16.1.1003.jar"))
+    implementation rfg.deobf(files("libs/theoneprobe-1.12-1.4.28.jar"))
+    implementation rfg.deobf(files("libs/groovyscript-1.1.1.jar"))
+    implementation rfg.deobf(files("libs/gtqtcore-1.0.jar"))
+    implementation rfg.deobf(files("libs/modularui-2.4.3.jar"))
+    implementation rfg.deobf(files("libs/Chisel-MC1.12.2-1.0.2.45.jar"))
+    implementation rfg.deobf(files("libs/architecturecraft-1.12-3.108.jar"))
+    implementation rfg.deobf(files("libs/Botania r1.10-364.4.jar"))
+    implementation rfg.deobf(files("libs/Pollution-1.0.jar"))
+    implementation rfg.deobf(files("libs/BloodMagic-1.12.2-2.4.3-105.jar"))
+    implementation rfg.deobf(files("libs/Guide-API-1.12-2.1.8-63.jar"))
+    implementation rfg.deobf(files("libs/TheBetweenlands-3.9.6-universal.jar"))
+    implementation rfg.deobf(files("libs/TheBetweenlands-3.9.6-core.jar"))
+    implementation rfg.deobf("curse.maven:baubles-227083:2518667")
+    implementation rfg.deobf("curse.maven:thaumcraft-223628:2629023")
 
     if (project.use_mixins.toBoolean()) {
         String mixin = modUtils.enableMixins("zone.rong:mixinbooter:8.6", "mixins.${project.archives_base_name}.refmap.json")
