--- a/build.gradle
+++ b/build.gradle
@@ -135,13 +135,15 @@ dependencies {
     implementation rfg.deobf(files("libs/gregtechfoodoption-1.12.2-1.11.0.jar"))
     implementation rfg.deobf(files("libs/jei_1.12.2-4.16.1.1003.jar"))
     implementation rfg.deobf(files("libs/theoneprobe-1.12-1.4.28.jar"))
+    implementation rfg.deobf(files("libs/Pollution-1.7.1.jar"))
     implementation rfg.deobf(files("libs/groovyscript-1.1.1.jar"))
-    implementation rfg.deobf(files("libs/gtqtcore-1.0.jar"))
+    implementation rfg.deobf(files("libs/gtqtcore-1.7.2.jar"))
     implementation rfg.deobf(files("libs/modularui-2.4.3.jar"))
+    implementation rfg.deobf(files("libs/ExtraBotany-r1.1-60-beta-hotfix.jar"))
     implementation rfg.deobf(files("libs/Chisel-MC1.12.2-1.0.2.45.jar"))
     implementation rfg.deobf(files("libs/architecturecraft-1.12-3.108.jar"))
     implementation rfg.deobf(files("libs/Botania r1.10-364.4.jar"))
-    implementation rfg.deobf(files("libs/Pollution-1.0.jar"))
+    implementation rfg.deobf(files("libs/Supercritical-0.0.2.jar"))
     implementation rfg.deobf(files("libs/BloodMagic-1.12.2-2.4.3-105.jar"))
     implementation rfg.deobf(files("libs/Guide-API-1.12-2.1.8-63.jar"))
     implementation rfg.deobf(files("libs/TheBetweenlands-3.9.6-universal.jar"))
