--- a/build.gradle
+++ b/build.gradle
@@ -122,34 +122,37 @@ dependencies {
         implementation 'zone.rong:mixinbooter:8.6'
     }
 
-    // Example of deobfuscating a dependency
-    // implementation rfg.deobf('curse.maven:had-enough-items-557549:4543375')
-    implementation rfg.deobf("curse.maven:mantle-74924:2713386")
-    implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
-    implementation rfg.deobf("curse.maven:tinkers-construct-74072:2902483")
-    implementation rfg.deobf(files("libs/CTM-MC1.12.2-1.0.2.31.jar"))
-    implementation rfg.deobf(files("libs/GregicalityMultiblocks-1.2.9.jar"))
-    implementation rfg.deobf(files("libs/gregtech-1.12.2-2.8.10-beta.jar"))
+    api("com.cleanroommc:groovyscript:1.2.0-hotfix1") { transitive = false }
+    api("com.cleanroommc:modularui:2.5.0-rc4") { transitive = false }
+    implementation rfg.deobf("curse.maven:code-chicken-lib-1-8-242818:2779848")
     implementation rfg.deobf(files("libs/!mixinbooter-8.9.jar"))
-    implementation rfg.deobf(files("libs/ae2-uel-v0.56.6.jar"))
-    implementation rfg.deobf(files("libs/gregtechfoodoption-1.12.2-1.11.0.jar"))
-    implementation rfg.deobf(files("libs/jei_1.12.2-4.16.1.1003.jar"))
+    implementation rfg.deobf(files("libs/Mantle-1.12-1.3.3.55.jar"))
+    implementation rfg.deobf(files("libs/TConstruct-1.12.2-2.13.0.183.jar"))
+    //辅助
+    implementation rfg.deobf("curse.maven:jei-238222:5101347")
+    implementation rfg.deobf("curse.maven:thaumic-jei-285492:2705304")
     implementation rfg.deobf(files("libs/theoneprobe-1.12-1.4.28.jar"))
-    implementation rfg.deobf(files("libs/Pollution-1.7.1.jar"))
-    implementation rfg.deobf(files("libs/groovyscript-1.1.1.jar"))
-    implementation rfg.deobf(files("libs/gtqtcore-1.7.2.jar"))
-    implementation rfg.deobf(files("libs/modularui-2.4.3.jar"))
-    implementation rfg.deobf(files("libs/ExtraBotany-r1.1-60-beta-hotfix.jar"))
-    implementation rfg.deobf(files("libs/Chisel-MC1.12.2-1.0.2.45.jar"))
-    implementation rfg.deobf(files("libs/architecturecraft-1.12-3.108.jar"))
-    implementation rfg.deobf(files("libs/Botania r1.10-364.4.jar"))
-    implementation rfg.deobf(files("libs/Supercritical-0.0.2.jar"))
-    implementation rfg.deobf(files("libs/BloodMagic-1.12.2-2.4.3-105.jar"))
-    implementation rfg.deobf(files("libs/Guide-API-1.12-2.1.8-63.jar"))
-    implementation rfg.deobf(files("libs/TheBetweenlands-3.9.6-universal.jar"))
-    implementation rfg.deobf(files("libs/TheBetweenlands-3.9.6-core.jar"))
+    implementation rfg.deobf("curse.maven:code-chicken-lib-1-8-242818:2779848")
+
+    implementation rfg.deobf(files("libs/Pollution-1.8.0.jar"))
+    implementation rfg.deobf(files("libs/Supercritical-1.8.0.jar"))
+    implementation rfg.deobf(files("libs/gregtech-1.12.2-2.9.0-MeowmelMuku.jar"))
+    implementation rfg.deobf(files("libs/gtsteam-1.8.0.jar"))
+    implementation rfg.deobf(files("libs/GregicalityMultiblocks-1.8.0-MeowmelMuku.jar"))
+    implementation rfg.deobf(files("libs/gregtechfoodoption-1.12.2-1.8.0.jar"))
+    implementation rfg.deobf(files("libs/gtqtcore-1.8.0.jar"))
+
+    implementation rfg.deobf(files("libs/ae2-uel-v0.56.6.jar"))
+    implementation rfg.deobf(files("libs/Fluid Craft for AE2-2.6.6-r.jar"))
+
     implementation rfg.deobf("curse.maven:baubles-227083:2518667")
     implementation rfg.deobf("curse.maven:thaumcraft-223628:2629023")
+    implementation rfg.deobf(files("libs/Botania r1.10-364.4.jar"))
+    implementation rfg.deobf(files("libs/BloodMagic-1.12.2-2.4.3-105.jar"))
+    implementation rfg.deobf(files("libs/Guide-API-1.12-2.1.8-63.jar"))
+    implementation rfg.deobf(files("libs/ExtraBotany-r1.1-60-beta-hotfix.jar"))
+    implementation rfg.deobf(files("libs/astralsorcery-1.12.2-1.10.27.jar"))
+    implementation rfg.deobf(files("libs/Avaritia-1.12.2-3.3.0.37-universal.jar"))
 
     if (project.use_mixins.toBoolean()) {
         String mixin = modUtils.enableMixins("zone.rong:mixinbooter:8.6", "mixins.${project.archives_base_name}.refmap.json")
